# TourBillon

./: .gitignore  CHANGELOG.rst  MANIFEST.in  README.rst  __pkginfo__.py  pyproject.toml  setup.py  sitecustomize.py
.github/workflows/: pylint.yml
conv/: trb4to5.py
conv/conv4to5/: EqTrb.py  GlobTrb.py  ListeEqTrb.py  ListeRencTrb.py  RencTrb.py  TransfoDateTrb.py
tests/: conftest.py  data.py  data2e2j.py  test_4eq_par_manche.py  test_draws.py  test_equipe.py  test_partie.py  test_player.py  test_round.py  test_team.py  test_tirage.py  test_tournament.py  test_tournoi.py
tests/data/: t2teams2players.py  t4teams1players.yml
tourbillon/: __init__.py  __main__.py  config.py  configuration.py  defaut.cfg  logger.py  trb.py
tourbillon/cli/: app.py  completer.py  interpreteur.py  progression.py  terminal.py
tourbillon/core/: constantes.py  cst.py  equipe.py  exception.py  exceptions.py  joueur.py  manche.py  match.py  partie.py  player.py  round.py  team.py  tournament.py  tournoi.py
tourbillon/gui/: app.py  barres.py  dlgequipe.py  dlgimpression.py  dlginformations.py  dlgpartie.py  dlgpreferences.py  dlgresultat.py  evenements.py  fenetre.py  grille.py
tourbillon/images/: __init__.py  entete.txt  icon.icns  splash.py
tourbillon/server/: app.py
tourbillon/trb_cli/: _completer.py  completer.py  imports_tipper.py  interface.py  interpreteur.py  progression.py  terminal.py
tourbillon/trb_conv/: trb4to5.py
tourbillon/trb_core/: constantes.py  equipe.py  equipes.py  exceptions.py  joueur.py  joueurs.py  manche.py  partie.py  parties.py  tournoi.py  tournois.py
tourbillon/trb_gui/: barres.py  dlgequipe.py  dlgimpression.py  dlginformations.py  grille.py  (+5 more)
(+29 files in other folders)
